--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 session_start();
 
 // データベースマネージャの読込
-require_once "../DBManager.php";
+require_once "./php/DBManager.php";
 $db = new DBManager();
 ?>
 <!DOCTYPE html>
@@ -26,7 +26,7 @@ $db = new DBManager();
         <div class="bg-dark bg-gradient">
             <div class="row">
                 <div class="col">
-                    <img src="" alt="プチコン３号作品倉庫">
+                    <a href="index.html"><img src="" alt="プチコン３号作品倉庫"></a>
                 </div>
                 <div class="col">
                     <ul>
