--- a/project.html
+++ b/project.html
@@ -43,38 +43,20 @@ $db = new DBManager();
         <div class="row p-1">
             <div class="col-8">
                 <div class="section">
-                    <h1>トップページ</h1>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
+                    <h1>project name</h1>
+                    <div id="imgfield">
+                        <img class="mb-1" width="100%" src="./img/projectimg/1678455260-s-1.jpg" alt="pic">
+                        <div id="imglist">
+                            <img width="20%" src="./img/projectimg/1678455260-s-1.jpg" alt="pic1">
+                            <img width="20%" src="./img/projectimg/1678455260-s-1.jpg" alt="pic2">
+                            <img width="20%" src="./img/projectimg/1678455260-s-1.jpg" alt="pic3">
+                            <img width="20%" src="./img/projectimg/1678455260-s-1.jpg" alt="pic4">
+                        </div>
+                    </div>
+                    <h2>公開キー</h2>
+                    <p>【HOGEHOGE】</p>
+                    <h2>概要</h2>
+                    <p>description</p>
                 </div>
             </div>
             <div class="col-4">
