--- a/project.html
+++ b/project.html
@@ -22,23 +22,7 @@ $db = new DBManager();
 </head>
 
 <body>
-    <nav id="navigation">
-        <div class="container-fluid m-0 bg-dark bg-gradient">
-            <div class="row">
-                <div class="col">
-                    <a href="index.html"><img src="" alt="プチコン３号作品倉庫"></a>
-                </div>
-                <div class="col">
-                    <ul>
-                        <li><a href="./login.html">ログイン</a></li>
-                        <li><a href="">検索</a></li>
-                        <li><a href="">問い合わせ</a></li>
-                        <li><a href="">READ ME</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <?php require './php/nav.php'; ?>
     <div class="container-fluid">
         <div class="row p-1">
             <div class="col-8">
