ページ追加等

--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@ $db = new DBManager();
                     <p>
                         こちらで用意した「名無しさん」というアカウントがありますのでそちらにログインして投稿してください。
                         ただし悪意を持った第三者にこのアカウントで投稿した記事が荒らされる可能性があることにご留意ください。
-                        （バックアップを取っていないので復元することができません。）
+                        （基本的にバックアップを取っていないので復元することができません。）
                         またこのアカウントではリアクションが送れません。
                     </p>
                     <p>
