--- a/readme.html
+++ b/readme.html
@@ -27,7 +27,48 @@ $db = new DBManager();
         <div class="row p-1">
             <div class="col-12">
                 <div class="section">
-                    <h1>規約</h1>
+                    <h1>READ ME</h1>
+                    <h2>禁止事項</h2>
+                    <p>
+                        以下に該当する内容は書き込んではいけません。
+                    </p>
+                    <ul>
+                        <li>閲覧者が不快に感じる内容</li>
+                        <li>法令に反する内容</li>
+                        <li>個人情報</li>
+                        <li>当サイトの趣旨に反する内容</li>
+                        <li>なりすまし</li>
+                    </ul>
+                    <p>
+                        上記を含めこちらが問題がある書き込みであると判断した場合は、
+                        当該の書き込みを削除したり、書き込みを行ったユーザに制限をかける場合があります。
+                    </p>
+                    <h2>免責</h2>
+                    <p>
+                        セキュリティには出来る限り万全を期していますが、素人の趣味制作サイトであるため
+                        悪意の第三者による情報漏洩・改ざん・消失等、ユーザによって登録された情報の安全性は保障できません。
+                    </p>
+                    <p>
+                        よって本サービスに関連して生じたユーザおよび第三者の結果的損害、付随的損害、逸失利益等の間接被害について、
+                        それらの予見、予見可能性の有無にかかわらず一切の責任を負いません。
+                    </p>
+                    <p>
+                        また当サイトはユーザに予告なくクローズすることがあります。ご了承ください。
+                    </p>
+                    <h2>利用ガイド</h2>
+                    <p>
+                        前項「免責」で述べたように情報漏洩の可能性は否定できません。
+                        そのためユーザ登録される際にはパスワードを<span class="text-danger fw-bold">絶対にほかのサービスで使用しているものとは
+                        異なるもの</span>にしてください。
+                        ただしパスワードリセットには基本的に対応しないので忘れないように注意してください。
+                    </p>
+                    <p>
+                        またメールアドレスもgmail、yahoo等のフリーメール、捨てメアドを使用することを推奨します。
+                        （今のところメールアドレスはユーザIDとして使用しているだけです。）
+                    </p>
+                    <p>
+                        2023/4/11 制定
+                    </p>
                 </div>
             </div>
         </div>
