--- a/project.html
+++ b/project.html
@@ -38,7 +38,7 @@ $db = new DBManager();
                         </div>
                     </div>
                     <h2>公開キー</h2>
-                    <p>【HOGEHOGE】</p>
+                    <p class="text-uppercase">【hogehoge】</p>
                     <h2>概要</h2>
                     <p>description</p>
                 </div>
