--- a/project.html
+++ b/project.html
@@ -41,6 +41,13 @@ $db = new DBManager();
                     <p class="text-uppercase">【hogehoge】</p>
                     <h2>概要</h2>
                     <p>description</p>
+                    <div id="repfield">
+                        <button id="good" type="button" class="btn btn-outline-primary">いいね！<span class="ms-1">0</span></button>
+                        <button id="downloaded" type="button" class="btn btn-outline-success">ダウンロードした！<span class="ms-1">0</span></button>
+                        <button id="nice" type="button" class="btn btn-outline-danger">ステキ！<span class="ms-1">0</span></button>
+                        <button id="great" type="button" class="btn btn-outline-warning">すごい！<span class="ms-1">0</span></button>
+                        <button id="effort" type="button" class="btn btn-outline-secondary">がんばって！<span class="ms-1">0</span></button>
+                    </div>
                 </div>
             </div>
             <div class="col-4">
