いろいろ追記

--- a/index.html
+++ b/index.html
@@ -28,50 +28,26 @@ $db = new DBManager();
             <div class="col-8">
                 <div class="section">
                     <h1>トップページ</h1>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
-                    <p>からようそ</p>
+                    <h2>ようこそプチコン３号作品倉庫へ！</h2>
+                    <p>
+                        プチコン４と違って３号は公開作品を一覧で見られない！<br />
+                        これじゃ隠れた名作を探すことも困難だ！<br />
+                        ということで、プチコン３号で作成されたプロジェクトを簡単な概要とともに投稿できるサイトです。
+                        e-ショップが死んでも３号はまだ現役！
+                    </p>
+                    <ul>
+                        <li><a href="http://smilebasic.com/">プチコン３号公式サイト</a></li>
+                        <li><a href="http://petitverse.hosiken.jp/community/petitcom/">プチコンシリーズユーザの交流場所、「Petitverse」</a></li>
+                    </ul>
+                    <h2>投稿しよう</h2>
+                    <p>
+                        このサイトは３号で公開されているプロジェクトを集めて一覧から検索できるようにすることが目的です。<br />
+                        各プロジェクトのページには評価ボタンがついており、「いいね！」や「すごい！」と賞賛を送ることができます。<br />
+                        投稿や評価にはユーザ登録が必要です。登録の前にREAD MEを必ず読んでください。
+                    </p>
                 </div>
             </div>
-            <div class="col-4">
-                <div class="section">
-                    <h1>新着</h1>
-                </div>
-                <div class="section">
-                    <h1>人気の作品</h1>
-                </div>
-                <div class="section">
-                    <h1>ランダム</h1>
-                </div>
-            </div>
+            <?php require './php/prjlist.php'; ?>
 
         </div>
     </div>
