--- a/project.html
+++ b/project.html
@@ -50,17 +50,7 @@ $db = new DBManager();
                     </div>
                 </div>
             </div>
-            <div class="col-4">
-                <div class="section">
-                    <h1>新着</h1>
-                </div>
-                <div class="section">
-                    <h1>人気の作品</h1>
-                </div>
-                <div class="section">
-                    <h1>ランダム</h1>
-                </div>
-            </div>
+            <?php require './php/prjlist.php'; ?>
 
         </div>
     </div>
