--- a/readme.html
+++ b/readme.html
@@ -38,6 +38,7 @@ $db = new DBManager();
                         <li>個人情報</li>
                         <li>当サイトの趣旨に反する内容</li>
                         <li>なりすまし</li>
+                        <li>意図的な記事の重複投稿</li>
                     </ul>
                     <p>
                         上記を含めこちらが問題がある書き込みであると判断した場合は、
@@ -65,6 +66,9 @@ $db = new DBManager();
                     <p>
                         またメールアドレスもgmail、yahoo等のフリーメール、捨てメアドを使用することを推奨します。
                         （今のところメールアドレスはユーザIDとして使用しているだけです。）
+                    </p>
+                    <p>
+                        当サイトは株式会社スマイルブーム様とは一切関係ありませんので、このサイトについての問い合わせ等を行わないでください。
                     </p>
                     <p>
                         2023/4/11 制定
