--- a/writing.html
+++ b/writing.html
@@ -31,7 +31,7 @@ $db = new DBManager();
             <div class="col-12">
                 <div class="section">
                     <h1>新規記事投稿</h1>
-                    <form id="form" action="./php/login.php" method="post" enctype="multipart/form-data">
+                    <form id="form" action="./php/writing.php" method="post" enctype="multipart/form-data">
                         <div>
                             <p class="">画像</p>
                             <input type="file" name="projectimg" accept="image/png, image/jpeg" multiple>
