--- a/search.html
+++ b/search.html
@@ -33,6 +33,7 @@ $db = new DBManager();
                             <label class="me-1"><input type="radio" name="searchtype" value="0" checked>記事名</label>
                             <label class="me-1"><input type="radio" name="searchtype" value="1">投稿者名</label>
                             <label class="me-1"><input type="radio" name="searchtype" value="2">投稿者NNID</label>
+                            <label class="me-1"><input type="radio" name="searchtype" value="3">タグ</label>
                         </div>
                         <div>
                             <input type="search" name="search" placeholder="キーワード">
