--- a/mypage.html
+++ b/mypage.html
@@ -1,6 +1,9 @@
 <?php
 // セッション
 session_start();
+if ($_SESSION['login_auth'] == 0) {
+    header("Location: ./index.html");
+}
 
 // データベースマネージャの読込
 require_once "./php/DBManager.php";
@@ -30,7 +33,7 @@ $result = $db->getUser($_SESSION['login_id']);
             <div class="col-12">
                 <div class="section">
                     <h1>プロフィール</h1>
-                    <form id="form" action="./php/" method="post">
+                    <form id="form" action="./php/mypage.php" method="post">
                         <div>
                             <p class="required">メールアドレス</p>
                             <input type="email" name="mail" value="<?php echo $result['user_mail'] ?>">
@@ -45,7 +48,7 @@ $result = $db->getUser($_SESSION['login_id']);
                         </div>
                         <div>
                             <p>概要</p>
-                            <textarea name="description" cols="35" rows="10" value="<?php echo $result['user_description'] ?>" placeholder="自己紹介などを書いてみましょう"></textarea>
+                            <textarea name="description" cols="35" rows="10" placeholder="自己紹介などを書いてみましょう"><?php echo $result['user_description'] ?></textarea>
                         </div>
                         <div>
                             <input type="submit" value="変更">
