アクセスログ
記録してみる

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ session_start();
 // データベースマネージャの読込
 require_once "./php/DBManager.php";
 $db = new DBManager();
+$db->OutPutlog();
 ?>
 <!DOCTYPE html>
 <html lang="ja">
