--- a/writing.html
+++ b/writing.html
@@ -8,6 +8,8 @@ if (!isset($_SESSION['login_id'])) {
 // データベースマネージャの読込
 require_once "./php/DBManager.php";
 $db = new DBManager();
+
+$db->OutPutlog();
 ?>
 <!DOCTYPE html>
 <html lang="ja">
