--- a/writing.html
+++ b/writing.html
@@ -36,7 +36,7 @@ $db->OutPutlog();
                     <form id="form" action="./php/writing.php" method="post" enctype="multipart/form-data">
                         <div>
                             <p class="">画像</p>
-                            <input type="file" name="projectimg" accept="image/png, image/jpeg" multiple>
+                            <input type="file" name="projectimg[]" accept="image/png, image/jpeg" multiple>
                             4枚まで送付することができます。(.png.jpg)
                         </div>
                         <div>
