--- a/search.html
+++ b/search.html
@@ -28,7 +28,7 @@ $db = new DBManager();
             <div class="col-12">
                 <div class="section">
                     <h1>作品検索</h1>
-                    <form id="form" action="" method="post">
+                    <form id="form" action="" method="get">
                         <div>
                             <label class="me-1"><input type="radio" name="searchtype" value="0" checked>記事名</label>
                             <label class="me-1"><input type="radio" name="searchtype" value="1">投稿者名</label>
