--- a/readme.html
+++ b/readme.html
@@ -64,7 +64,7 @@ $db = new DBManager();
                         ただしパスワードリセットには基本的に対応しないので忘れないように注意してください。
                     </p>
                     <p>
-                        またメールアドレスもgmail、yahoo等のフリーメール、捨てメアドを使用することを推奨します。
+                        またメールアドレスもgmail、yahoo等のフリーメール、捨てメアドを使用することを推奨します。（現時点ではログインIDとして使用しているのみです。）
                     </p>
                     <p>
                         当サイトは株式会社スマイルブーム様とは一切関係ありませんので、このサイトについての問い合わせ等を行わないでください。
