--- a/userpage.html
+++ b/userpage.html
@@ -9,6 +9,7 @@ $db = new DBManager();
 $db->OutPutlog();
 
 $result = $db->getUser($_GET['id']);
+$prjlist = $db->getProjectsByUserid($_GET['id']);
 ?>
 <!DOCTYPE html>
 <html lang="ja">
@@ -37,6 +38,28 @@ $result = $db->getUser($_GET['id']);
                         <?php echo $result['user_description'] ?>
                     </p>
                     <h2>投稿記事</h2>
+                    <div class="row row-cols-1 row-cols-md-3 g-1">
+                        <?php
+                            foreach ($prjlist as $key) {
+                                echo "<div class='col'>";
+                                echo "<a class='cardtext' href='./project.html?id=".$key["project_id"]."'>";
+                                echo '<div class="card">';
+                                if (file_exists("./img/projectimg/".(int)$key['project_id']."/img0.png")) {
+                                    echo '<img src="./img/projectimg/'.(int)$key['project_id'].'/img0.png" class="card-img-top" alt="image">';
+                                } else {
+                                echo '<img src="" class="card-img-top" alt="No IMG">';
+                                }
+                                echo '<div class="card-body">';
+                                echo '<h5 class="card-title">'.$key['project_name'].'</h5>';
+                                echo "<p class='card-text cardlinelimit'>".strip_tags($key['project_description'])."</p>";
+                                echo '</div>';
+                                echo '</div>';
+                                echo "</a>";
+                                echo '</div>';
+                            }
+                        ?>
+                    </div>
+                    
                 </div>
             </div>
             <?php require './php/prjlist.php'; ?>
