--- a/project.html
+++ b/project.html
@@ -66,7 +66,7 @@ if (isset($_SESSION['login_id']) && $_SESSION['login_auth'] != 0) {
                         <?php
                             $data = $db->getTagsByProject($_GET['id']);
                             foreach ($data as $key) {
-                                echo '<a class="taglink" href="./search.html?searchtype=3&search='.$key['tag_name'].'">'.$key['tag_name'].'</a>';
+                                echo '<a class="taglink" href="./search.html?searchtype=3&search='.$key['tag_name'].'">'.htmlentities($key['tag_name'],ENT_QUOTES).'</a>';
                             }
                         ?>
                     </div>
