--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,10 @@ $db = new DBManager();
             <div class="col-12">
                 <div class="section">
                     <h1>問い合わせ</h1>
-                    
+                    <ul>
+                        <li>contact@mitsutan.dev</li>
+                        <li><a href="https://twitter.com/kndu_ptcm">@kndu_ptcm</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
