--- a/project.html
+++ b/project.html
@@ -41,6 +41,9 @@ if (isset($_SESSION['login_id']) && $_SESSION['login_auth'] != 0) {
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.4/dist/trix.css">
+    <link rel="stylesheet" href="css/trix_overwrite.css">
+
     <title>プチコン３号作品倉庫</title>
 </head>
 
@@ -89,7 +92,7 @@ if (isset($_SESSION['login_id']) && $_SESSION['login_auth'] != 0) {
                     <h2>公開キー</h2>
                     <p class="text-uppercase">【<?php echo $result['project_pk'] ?>】</p>
                     <h2>概要</h2>
-                    <p><?php echo $result['project_description'] ?></p>
+                    <div class="trix-content"><?php echo htmlspecialchars_decode($result['project_description'], ENT_QUOTES) ?></div>
                     <div id="repfield">
                         <button id="good" type="button" class="btn btn-outline-primary" onclick="sendhttpreq('good',`<?php echo $_GET['id'] ?>`,'<?php echo $userid ?>')" <?php echo $reped['good'] ?>><i class="fa-regular fa-thumbs-up"></i>いいね！<span id="goodnum" class="ms-1"><?php echo $rep['good'] ?></span></button>
                         <button id="downloaded" type="button" class="btn btn-outline-success" onclick="sendhttpreq('downloaded',`<?php echo $_GET['id'] ?>`,'<?php echo $userid ?>')" <?php echo $reped['download'] ?>><i class="fa-solid fa-file-arrow-down"></i>ダウンロードした！<span id="downloadednum" class="ms-1"><?php echo $rep['download'] ?></span></button>
