--- a/writing.html
+++ b/writing.html
@@ -23,6 +23,10 @@ $db->OutPutlog();
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.4/dist/trix.css">
+    <link rel="stylesheet" href="css/trix_overwrite.css">
+    <script type="text/javascript" src="https://unpkg.com/trix@2.0.4/dist/trix.umd.min.js"></script>
+
     <title>プチコン３号作品倉庫</title>
 </head>
 
@@ -49,8 +53,11 @@ $db->OutPutlog();
                         </div>
                         <div>
                             <p class="required">概要</p>
-                            <textarea name="projectdesc" id="" cols="35" rows="10" placeholder="<h3>操作方法</h3>"></textarea>
-                            <div>
+                            <!-- <textarea name="projectdesc" id="" cols="35" rows="10"
+                                placeholder="<h3>操作方法</h3>"></textarea> -->
+                            <input id="desc" type="hidden" name="projectdesc">
+                            <trix-editor input="desc" class="trix-content"></trix-editor>
+                            <!-- <div>
                                 次のhtmlタグが使用できます：
                                 a(リンク)
                                 p(段落)
@@ -63,7 +70,7 @@ $db->OutPutlog();
                                 li(リスト項目)
                                 h3(見出し)<br />
                                 style属性は使用できません。（無視されます）
-                            </div>
+                            </div> -->
                         </div>
                         <div>
                             <p>タグ</p>
